--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,13 @@
+
+app_blogs:
+    path: /blogs
+    controller: 'App\Controller\BlogController::index'
+    methods: [GET] 
+
+
 controllers:
     resource:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
