--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-# APP_ENV=prod
-APP_ENV=dev
+APP_ENV=prod
+#APP_ENV=dev
 APP_SECRET=b01600498e5bbe000bb87b7b920f574b
-
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+#APP_DEBUG=true
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN=*
