--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-foundation": "7.0.*",
+        "symfony/requirements-checker": "^2.0",
         "symfony/runtime": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/yaml": "7.0.*"
@@ -47,7 +49,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -66,6 +69,7 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.58"
+        "symfony/debug-bundle": "7.0.*",
+        "symfony/maker-bundle": "^1.59"
     }
 }
